# detect_type

./: README.md  main.py  post_demo.py  send.py  u_go.py
AI/: AI_detect.py  detection_model.py
onnx_infer/: CMakeLists.txt  demo.cpp  main.cpp
utils/: Detect_ddt.py  Post_data.py
